# octos-tui

./: .gitignore  Cargo.toml  README.md  TUI-使用指南.md  TUI-测试指南.md  build.rs  dist-workspace.toml
.github/workflows/: publish-homebrew.yml  release.yml
Formula/: octos-tui.rb
docs/: AGENTSPEC_HANDOVER.md  APPUI_E2E_UX_FIXTURE.md  APPUI_SKILLS_249_SOAK.md  ARCHITECTURE.md  AppUI_MENU_CAPABILITY_GAPS.md  CODING_UX_PROMPT_CONTRACT.md  DEEPSEEK_TUI_TERMINAL_TACTICS.md  DESIGN_update_doctor.md  LLM_PROFILE_AND_OTP_TUI_PLAN.md  M12_SOLO_MODE_AND_PERMISSIONS_TUI_CONTRACT.md  M18_STDIO_LIVE_FLAKE_BUDGET.md  M22_REUSE_MAP.md  M9_34_MENU_FRAMEWORK_MILESTONE.md  ONBOARDING_TMUX_SOAK.md
fixtures/: m12_permissions_server_truth.json  m12_solo_onboarding_profile_local_create.json  m13_supervised_task_list.json  m16_context_lifecycle.json
fixtures/appui_ux_parity/: coding_session_short.json
locales/: en.yml  zh.yml
scripts/: capture-appui-ux-pty.sh  fake-openai-server.py  run-m18-stdio-live-tmux-soak.sh  run-onboarding-tmux-soak.sh  run-peer-dock-tmux-soak.sh  validate-appui-ux-fixture.sh  validate-tmux-ux-capture.sh
specs/: project.spec  task-activity-group-collapse.spec  task-activity-navigator-overlay.spec  task-activity-recent-changes.spec  task-code-syntax-highlight.spec  task-composer-multiline.spec  task-composer-vim-mode.spec  task-config-persistence.spec  task-doctor-live-capability-probe-and-quality-gate.spec  task-geometry-helper.spec  task-highlight-theme-follow.spec  task-inline-diff-livediff-polish.spec  task-markdown-links.spec  task-markdown-stream-flush.spec  task-onboarding-exit-and-existing-profile.spec  task-onboarding-saved-provider.spec  task-pager-scrollbar-model.spec  task-pager-visual-continuity.spec  task-pinned-scroll-mode.spec  task-scroll-smoothness.spec  task-scrollback-scar.spec  task-scrollmode-command.spec  task-transcript-diff-code-highlight.spec  task-transcript-pager.spec  task-transcript-role-contrast.spec  task-unified-hint-bar.spec
src/: app.rs  autonomy.rs  backend_ensure.rs  cli.rs  client_driver.rs  client_event.rs  clipboard.rs  event_loop.rs  file_picker.rs  highlight.rs  history.rs  insert_history.rs  keymap.rs  lib.rs  main.rs  model.rs  permission_profile.rs  profiles.rs  sanitize.rs  store.rs  terminal_probe.rs  theme.rs  transport.rs  tui_terminal.rs  viewport.rs
tests/: activity_collapse_contract.rs  activity_navigator_contract.rs  appui_ux_fixture.rs  code_highlight_contract.rs  composer_multiline_contract.rs  composer_vim_contract.rs  highlight_theme_contract.rs  m12_solo_permissions_contract.rs  m12_workspace_cwd_gating_contract.rs  m13_supervised_task_inspection_contract.rs  m15_autonomy_constants.rs  m15_autonomy_dispatch_contract.rs  m16_context_lifecycle_contract.rs  markdown_links_contract.rs  markdown_stream_flush_contract.rs  onboarding_escape_hatch_contract.rs  onboarding_saved_provider_contract.rs  pager_visual_continuity_contract.rs  perf_probe.rs  pinned_scroll_mode_contract.rs  review_start_contract.rs  save_config_contract.rs  scroll_smoothness_contract.rs  scrollmode_command_contract.rs  session_hydrate_contract.rs  slash_popup_contract.rs  transcript_pager_contract.rs  transcript_role_contrast_contract.rs  turn_state_contract.rs
(+28 files in other folders)
