[package]
name = "octos-tui"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
repository = "https://github.com/octos-org/octos-tui"
homepage = "https://github.com/octos-org/octos-tui"
description = "Terminal UI client for the Octos UI Protocol"

[[bin]]
name = "octos-tui"
path = "src/main.rs"

# octos-core is the shared protocol crate, owned by the `octos` repo. We depend
# on it by git so a clean checkout (`cargo install --git`, release CI) builds
# without a sibling `../octos`. For live local dev against an uncommitted core,
# add a gitignored `.cargo/config.toml` (see `.cargo/config.toml.example`) that
# patches it to a sibling path — no need to edit this file.
[dependencies]
octos-core = { git = "https://github.com/octos-org/octos", rev = "f020813810c91a146ac7cddfb3cd4cfcaf8f8a8f" }
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
shlex = "1.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
crossterm = "0.28"
ratatui = "0.29"
unicode-width = "0.2"
unicode-segmentation = "1"
rust-i18n = "3"
# `update`/`doctor` use a blocking HTTPS client for the GitHub release check.
# Pure-rustls to keep the no-OpenSSL convention.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
semver = "1"
# In-place self-update for the cargo-dist (shell/PowerShell) installer method.
# Optional + default-on via the `update` feature; with the feature OFF, `update`
# still works as a pure advisor (detect method + print command + `--check`).
axoupdater = { version = "0.6", default-features = false, features = ["github_releases", "blocking"], optional = true }

[features]
default = ["update"]
# Enables axoupdater-backed in-place self-update for cargo-dist installs.
# Distro/package builds can disable it (matches rustup's `no-self-update`).
update = ["dep:axoupdater"]

[lints.rust]
unsafe_code = "deny"

[workspace]
resolver = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
